2015-07-25  Dirk Eddelbuettel  <edd@debian.org>

	* .travis.yml: Use r-cran-* packages for faster test

	* vignettes/RcppZiggurat.bib: Updated references

2015-07-24  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/Ziggurat.h: Use abs() not fabs() on int variable
	* inst/include/ZigguratLZLLV.h: Idem
	* inst/include/ZigguratMT.h: Idem
	* inst/include/ZigguratR.h: Idem
	* inst/include/ZigguratV1.h: Idem
	* inst/include/ZigguratV1b.h: Idem

2014-07-29  Dirk Eddelbuettel  <edd@debian.org>

	* src/Makevars{,.win}: Simplify PKG_LIBS as we only need RcppGSL

2014-06-23  Dirk Eddelbuettel  <edd@debian.org>

	* vignettes/RcppZiggurat.Rnw: Several small edits and typo fixes

2014-06-18  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/Ziggurat.h (Ziggurat): In nfix() use SHR3 like LZLLV;
	also standard ctor constants (which get reset by init() anyway)

	* vignettes/RcppZiggurat.RData: Updated simulation results

	* tests/zigguratTest.Rout.save: Updated now that the default Ziggurat
	generator is in fact identical to LZLLV

	* tests/zigguratTestAll.R: New test to validate that results are
	identical on 32 and 64 bit platforms
	* tests/zigguratTestAll.Rout.save: Reference output

	* vignettes/RcppZiggurat.Rnw: Added comment about cached results

2014-06-15  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/*: Switch generators from float to double to ensure
	consistent results on 32 and 64 bit platforms

2014-06-14  Dirk Eddelbuettel  <edd@debian.org>

	* src/ziggurat.cpp (zsetseedGSL): Add seed setter for GSL variant
	* man/ziggurat.Rd: Documentation entry for GSL seed setter

2014-01-26  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Version 0.1.2

2014-01-22  Dirk Eddelbuettel  <edd@debian.org>

	* NAMESPACE: Add importFrom(Rcpp, evalCpp) needed for next Rcpp

2013-12-29  Dirk Eddelbuettel  <edd@debian.org>

	* demo/notForCRANbenchmark.R: Updates to the benchmark deploying the
	generators from Boost, Armadillo and the C++11 library -- none of