@@ -1,29 +1,31 @@
-# Sample .travis.yml for R projects.
-#
-# See https://github.com/craigcitro/r-travis 
-#     https://github.com/eddelbuettel/r-travis/
-
-sudo: required                                     
+# Run Travis CI for R using https://eddelbuettel.github.io/r-travis/
 
 language: c
 
+sudo: required
+
+dist: trusty
+
 before_install:
+  - curl -OLs https://eddelbuettel.github.io/r-travis/run.sh && chmod 0755 run.sh
   ## PPA for Rcpp and some other packages
   - sudo add-apt-repository -y ppa:edd/misc
-  ## r-travis by Craig Citro et al
-  - curl -OL http://raw.github.com/craigcitro/r-travis/master/scripts/travis-tool.sh
-  - chmod 755 ./travis-tool.sh
-  - ./travis-tool.sh bootstrap
+  - ./run.sh bootstrap
 
 install:
-  - ./travis-tool.sh install_aptget libgsl0-dev r-cran-rcppgsl r-cran-rbenchmark r-cran-microbenchmark r-cran-highlight
+  - ./run.sh install_aptget libgsl0-dev r-cran-rcppgsl r-cran-rbenchmark r-cran-microbenchmark r-cran-highlight
+  
+script:
+  - ./run.sh run_tests
 
-script: 
-  - ./travis-tool.sh run_tests
+after_failure:
+  - ./run.sh dump_logs
 
 notifications:
   email:
     on_success: change
     on_failure: change
+
+    
 
 
