@@ -1,3 +1,7 @@
+2017-08-26  Dirk Eddelbuettel  <edd@debian.org>
+
+	* .travis.yml: Use run.sh from r-travis
+
 2015-07-25  Dirk Eddelbuettel  <edd@debian.org>
 
 	* .travis.yml: Use r-cran-* packages for faster test
